# Windows-Island

./: .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: install.ps1  island-notify.ps1  island-permission.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  lib.rs  main.rs  window.rs
src-tauri/src/commands/: agent.rs  battery.rs  bluetooth.rs  brightness.rs  gamemode.rs  media.rs  mod.rs  network.rs  notification.rs  volume.rs  window.rs
src/components/: AgentResponsePanel.tsx  BatteryStatus.tsx  BluetoothStatus.tsx  BrightnessControl.tsx  ExpandedPanel.tsx  NetworkStatus.tsx  VolumeControl.tsx
src/components/tabs/: AITab.tsx  MediaTab.tsx  MessagesTab.tsx  SystemTab.tsx
src/hooks/: useGameMode.ts  useSystemData.ts
src/lib/: tauri.ts
src/styles/: global.css
