[package]
name = "windows-island"
version = "0.1.0"
description = "Windows Dynamic Island"
authors = []
edition = "2021"

[lib]
name = "windows_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
dirs-next = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Power",
  "Win32_NetworkManagement_WiFi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Media_Control",
  "Foundation",
  "Devices_Bluetooth",
  "Devices_Radios",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
] }
rusqlite = { version = "0.31", features = ["bundled"] }
wmi = "0.13"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
